src/objects/Task_View_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Preferences for Community task views</description>
    <fields>
        <fullName>AVB_Associate_Filter__c</fullName>
        <label>AVB Associate Filter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubCategory_Filter__c</fullName>
        <label>SubCategory Filter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Filter__c</fullName>
        <label>Date view  Filter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Task View Settings</label>
</CustomObject>